# mcp-github-repo-creator

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  server.py  setup.py  setup.sh
core/: create_github_repo.py  repository_analyzer.py  templates.py
tests/: test_core_functionality.py  test_interactive_workflow.py  test_mcp_server.py  test_merged_server.py
